src/test/c/reject/30-invalid-else.arcx
else {
    a:int=0;
} 